--- a/08_2_Ponder_and_Prove_The_RSA_Cryptosystem.ipynb
+++ b/08_2_Ponder_and_Prove_The_RSA_Cryptosystem.ipynb
@@ -430,7 +430,7 @@
       },
       "source": [
         "## Fun\n",
-        "Replace these words with your own detailing how you had fun (if you did)."
+        "as i have said before i really enjoy working in this group we get lots of stuff done. We all have a good realationship and all of us work well together. the assignment was also interesting this week so of corse i had fun. "
       ]
     },
     {
@@ -440,7 +440,7 @@
       },
       "source": [
         "## New\n",
-        "Replace these words with your own detailing what was something new you learned (if anything)."
+        "I learned a lot about python code. (I may make lots of good sugestions on what to do but I dont always know how to do it.) I learned how to find the max size of the message by takeing the log_base 27 of n that way our message m will not be bigger then n.   "
       ]
     },
     {
@@ -450,7 +450,7 @@
       },
       "source": [
         "## Meaningful\n",
-        "Replace these words with your own detailing what you achieved that was meaningful or that you can build upon."
+        "I learned how to use join in python to join a list of lists together and sort them from most to least. I didnt completly understand how the code provided to us translates the string into one big number. I would like to know how the code is able to translate the number back into the corect letters.  "
       ]
     },
     {
@@ -460,7 +460,7 @@
       },
       "source": [
         "## Other\n",
-        "Replace these words with your own describing other topics or sections of your report --- Connections, Collaborator Contributions, or anything else you feel impressed to add."
+        "Just as last week I worked in the same group. This weeks ponder and prove was extra interesting and by the end we all felt that we acomplished something. I feel I learned more this time than in any other ponder and prove so far. "
       ]
     },
     {
@@ -485,41 +485,41 @@
       "source": [
         "#@markdown ## What is True about what I did?\n",
         "#@markdown ### I had fun.\n",
-        "cb00 = False #@param {type:'boolean'}\n",
+        "cb00 = True #@param {type:'boolean'}\n",
         "#@markdown ### I learned something new.\n",
-        "cb01 = False #@param {type:'boolean'}\n",
+        "cb01 = True #@param {type:'boolean'}\n",
         "#@markdown ### I achieved something meaningful, or something I can build upon at a later time.\n",
-        "cb02 = False #@param {type:'boolean'}\n",
+        "cb02 = True #@param {type:'boolean'}\n",
         "#@markdown ## What is True about my report?\n",
         "#@markdown ### I wrote a sufficient number of well-written sentences.\n",
-        "cb03 = False #@param {type:'boolean'}\n",
+        "cb03 = True #@param {type:'boolean'}\n",
         "#@markdown ### My report is free of mechanical infelicities.\n",
-        "cb04 = False #@param {type:'boolean'}\n",
+        "cb04 = True #@param {type:'boolean'}\n",
         "#@markdown ### I used Grammarly (or something better described in my report) to check for MIs.\n",
-        "cb05 = False #@param {type:'boolean'}\n",
+        "cb05 = True #@param {type:'boolean'}\n",
         "#@markdown ### I reported on any connections I found between these problems and something I already know. \n",
-        "cb06 = False #@param {type:'boolean'}\n",
+        "cb06 = True #@param {type:'boolean'}\n",
         "#@markdown ### I reported who were and what contribution each of my collaborators made.\n",
-        "cb07 = False #@param {type:'boolean'}\n",
+        "cb07 = True #@param {type:'boolean'}\n",
         "#@markdown ## What is True about my explorations?\n",
         "#@markdown ### I correctly extracted the right modulus.\n",
-        "cb08 = False #@param {type:'boolean'}\n",
+        "cb08 = True #@param {type:'boolean'}\n",
         "#@markdown ### I correctly extracted the right public exponent.\n",
-        "cb09 = False #@param {type:'boolean'}\n",
+        "cb09 = True #@param {type:'boolean'}\n",
         "#@markdown ### I correctly extracted the right private exponent.\n",
-        "cb10 = False #@param {type:'boolean'}\n",
+        "cb10 = True #@param {type:'boolean'}\n",
         "#@markdown ### I correctly extracted the right prime1 value.\n",
-        "cb11 = False #@param {type:'boolean'}\n",
+        "cb11 = True #@param {type:'boolean'}\n",
         "#@markdown ### I correctly extracted the right prime2 value.\n",
-        "cb12 = False #@param {type:'boolean'}\n",
+        "cb12 = True #@param {type:'boolean'}\n",
         "#@markdown ### I correctly extracted the right exponent1 value.\n",
-        "cb13 = False #@param {type:'boolean'}\n",
+        "cb13 = True #@param {type:'boolean'}\n",
         "#@markdown ### I correctly extracted the right exponent2 value.\n",
-        "cb14 = False #@param {type:'boolean'}\n",
+        "cb14 = True #@param {type:'boolean'}\n",
         "#@markdown ### I found the one correct substring of the Title Page of the Book of Mormon that fits all the criteria.\n",
-        "cb15 = False #@param {type:'boolean'}\n",
+        "cb15 = True #@param {type:'boolean'}\n",
         "#@markdown ### I explored the meaning of the exponent1 and exponent2 values.\n",
-        "cb16 = False #@param {type:'boolean'}"
+        "cb16 = True #@param {type:'boolean'}"
       ],
       "execution_count": null,
       "outputs": []
@@ -537,7 +537,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rJ_vaL0DWwoc"
+        "id": "rJ_vaL0DWwoc",
+        "outputId": "91a4612a-d7f6-4349-938c-756024aba08b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 368
+        }
       },
       "source": [
         "points_for_what_I_did = [5]*3\n",
@@ -549,8 +554,22 @@
         "                range(len(points)), points))             \n",
         "total"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-50494e40f0e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# cb is short for checkbox\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m total = sum(map(lambda n, p: p if eval(f'cb{n:02}') else 0,\n\u001b[0;32m----> 7\u001b[0;31m                 range(len(points)), points))             \n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mtotal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-1-50494e40f0e3>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(n, p)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpoints\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoints_for_what_I_did\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mpoints_for_my_report\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mpoints_for_my_explorations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# cb is short for checkbox\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m total = sum(map(lambda n, p: p if eval(f'cb{n:02}') else 0,\n\u001b[0m\u001b[1;32m      7\u001b[0m                 range(len(points)), points))             \n\u001b[1;32m      8\u001b[0m \u001b[0mtotal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<string>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'cb00' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -571,7 +590,7 @@
         "number_of_MIs_found = 0 #@param {type:\"slider\", min:0, max:5, step:1}\n",
         "#@markdown ---\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     }
   ]
