Added Grading Comments

--- a/08_1_About_Encryption_Resembling_Scrambling.ipynb
+++ b/08_1_About_Encryption_Resembling_Scrambling.ipynb
@@ -509,6 +509,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "x1I10sgw1CBI"
+      },
+      "source": [
+        "$\\color{red}{\\text{Awesome!}}$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "EIGjniwq09De"
       },
       "source": [
@@ -572,6 +581,15 @@
       },
       "source": [
         "It is not a good idea to use consecutive primes it would make the second prime easy to find."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yB4TqYxZ1Ev4"
+      },
+      "source": [
+        "$\\color{red}{\\text{While not using consecutive primes is a wise idea, the idea of this question is to understand that p and q need to be large primes.}}$"
       ]
     },
     {
