--- a/09_1_About_Huffman_Trees_and_Codes.ipynb
+++ b/09_1_About_Huffman_Trees_and_Codes.ipynb
@@ -6,7 +6,6 @@
       "name": "09_1_About_Huffman_Trees_and_Codes.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNYVKKcM6551Wvyp7aqsOho",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/09_1_About_Huffman_Trees_and_Codes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/09_1_About_Huffman_Trees_and_Codes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -57,7 +56,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7C-ClNTHQkFw"
+        "id": "7C-ClNTHQkFw",
+        "outputId": "e76f3e80-8dc5-49f0-d521-f6c0799a1a25",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from math import ceil, log\n",
@@ -92,8 +95,17 @@
         "\n",
         "print(message2, '-->', counter2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "thebookofmormon --> Counter({'o': 5, 'm': 2, 't': 1, 'h': 1, 'e': 1, 'b': 1, 'k': 1, 'f': 1, 'r': 1, 'n': 1})\n",
+            "therestoration --> Counter({'t': 3, 'e': 2, 'r': 2, 'o': 2, 'h': 1, 's': 1, 'a': 1, 'i': 1, 'n': 1})\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -102,6 +114,15 @@
       },
       "source": [
         "### Which message has the lower compression ratio?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YNX-KJVU4ZB9"
+      },
+      "source": [
+        "Message 2 has the lower compressio ratio."
       ]
     },
     {
@@ -235,7 +256,7 @@
         "\n",
         "show_results(message1, message1_code_tuples)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +341,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-2FB2vHtVbY4"
+        "id": "-2FB2vHtVbY4",
+        "outputId": "8c82a759-a8f5-43da-c3ca-0e483815ddd0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
       },
       "source": [
         "'''\n",
@@ -335,8 +361,24 @@
         "             a1 h1 i1 n1\n",
         "'''"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'\\n    tseorahin14\\n    /         tse6     orahin8\\n  / \\\\      /    t3 se3   or4   ahin4\\n   / \\\\   / \\\\    /     s1 e2 o2 r2 ah2   in2\\n              / \\\\   /              a1 h1 i1 n1\\n'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -359,7 +401,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3J20ht-dVbY6"
+        "id": "3J20ht-dVbY6",
+        "outputId": "10f22723-d94e-4307-b87f-8185fdbfecd6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "message2_code_tuples = \\\n",
@@ -376,8 +422,22 @@
         "\n",
         "show_results(message2, message2_code_tuples)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "          Total Characters: 14\n",
+            "   Total Unique Characters: 9\n",
+            "                Total Bits: 43\n",
+            "Average Bits per Character: 3.07\n",
+            "  Fixed Bits per Character: 4\n",
+            "          Total Fixed Bits: 56\n",
+            "         Compression Ratio: 0.232\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -406,7 +466,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7TBjHxPqx9WI",
-        "outputId": "adf1269c-93da-47b4-c802-8f8cb124cab6"
+        "outputId": "4e194d9e-1dc9-496f-aba9-b762995dcd72"
       },
       "source": [
         "from sympy import primerange\n",
@@ -422,12 +482,80 @@
         "\n",
         "print(list_of_gaps)"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[2, 2, 4, 2, 4, 2, 4, 6, 2, 6, 4, 2, 4, 6, 6, 2, 6, 4, 2, 6, 4, 6, 8]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Fhv15Xw7KFi",
+        "outputId": "ac4f1954-e754-40ce-db62-fb3f836accfa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "counter3 = Counter(list_of_gaps)\n",
+        "print(list_of_gaps, '-->', counter3)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 2, 4, 2, 4, 2, 4, 6, 2, 6, 4, 2, 4, 6, 6, 2, 6, 4, 2, 6, 4, 6, 8] --> Counter({2: 8, 4: 7, 6: 7, 8: 1})\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NDDFdhvh8ac1"
+      },
+      "source": [
+        "8-1, 4-7, 6-7, 2-8"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A7-oX_Tv7n8Z",
+        "outputId": "6f46ed39-47a9-49f2-dd29-237d32cbcea3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "list_of_gaps_code_tuples = \\\n",
+        "[(2, 8, '100'),\n",
+        " (4, 7, '01'),\n",
+        " (6, 7, '11'),\n",
+        " (8, 1, '00'),\n",
+        "]\n",
+        "show_results(list_of_gaps, list_of_gaps_code_tuples)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "          Total Characters: 23\n",
+            "   Total Unique Characters: 4\n",
+            "                Total Bits: 54\n",
+            "Average Bits per Character: 2.35\n",
+            "  Fixed Bits per Character: 2\n",
+            "          Total Fixed Bits: 46\n",
+            "         Compression Ratio: -0.174\n"
           ],
           "name": "stdout"
         }
