--- a/07_2_Ponder_and_Prove_Elementary_Number_Theory.ipynb
+++ b/07_2_Ponder_and_Prove_Elementary_Number_Theory.ipynb
@@ -347,6 +347,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "bDBNlOv0_ia9"
+      },
+      "source": [
+        "$\\color{red}{\\text{Excellent work!}}$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "5Cgy_0B4Q2WW"
       },
       "source": [
@@ -463,56 +472,6 @@
         "#@markdown ### It correctly uses the Chinese Remainder Theorem.\n",
         "cb17 = True #@param {type:'boolean'}\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "q8KESLBANSkC"
-      },
-      "source": [
-        "## DO NOT CHANGE ANYTHING IN THE NEXT CODE CELL!!\n",
-        "### Delete this cell and the following ones before submitting your work."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rJ_vaL0DWwoc"
-      },
-      "source": [
-        "points_for_what_I_did = [5]*3\n",
-        "points_for_my_report = [7]*5\n",
-        "points_for_my_proof = [5]*10\n",
-        "points = points_for_what_I_did + points_for_my_report + points_for_my_proof\n",
-        "# cb is short for checkbox\n",
-        "total = sum(map(lambda n, p: p if eval(f'cb{n:02}') else 0,\n",
-        "                range(len(points)), points))             \n",
-        "total"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "muxeYgQQKGEU"
-      },
-      "source": [
-        "# For graders"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "c0ldoieNKMTU"
-      },
-      "source": [
-        "#@markdown ---\n",
-        "number_of_MIs_found = 0 #@param {type: 'slider', min: 0, max: 5}\n",
-        "#@markdown ---\n"
       ],
       "execution_count": null,
       "outputs": []
