--- a/09_3_About_Huffman_Tree_Growing.ipynb
+++ b/09_3_About_Huffman_Tree_Growing.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "09_3_About_Huffman_Tree_Growing.ipynb",
+      "name": "Copy of 09_3_About_Huffman_Tree_Growing.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN52YHKfopcKZXzgGtSyE9P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/09_3_About_Huffman_Tree_Growing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/09_3_About_Huffman_Tree_Growing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -290,6 +289,15 @@
       },
       "source": [
         "Read [A Method for the Construction of Minimum-Redundancy Codes](http://compression.ru/download/articles/huff/huffman_1952_minimum-redundancy-codes.pdf) (David Huffman's original paper) and by drawing pictures, make the connection between trees and rivers vivid in your mind!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GPJvgwSaEBgm"
+      },
+      "source": [
+        "<img src='https://drive.google.com/file/d/15pTi_ig9tjXqsGFIbT4XsCrIK2DIlUY1/view?usp=sharing'/>"
       ]
     }
   ]
