--- a/09_2_Ponder_and_Prove_Data_Compression.ipynb
+++ b/09_2_Ponder_and_Prove_Data_Compression.ipynb
@@ -31,7 +31,14 @@
       },
       "source": [
         "# Ponder and Prove Data Compression\n",
-        "#### Due: Saturday, 6 March 2021, 11:59 pm."
+        "#### Due: Saturday, 6 March 2021, 11:59 pm.\n",
+        "\n",
+        "*Brayden Whitlock*\n",
+        "\n",
+        "In collaboration with:\n",
+        "- Davis Kerr\n",
+        "- Matthew Reed\n",
+        "- Paul Semadeni"
       ]
     },
     {
@@ -41,12 +48,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9476f428-566e-4d82-f9a4-6a133b0dd808"
+        "outputId": "9d980643-e585-4e1c-a76b-b0778fc6c4fc"
       },
       "source": [
         "!pip install pyprimesieve"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +199,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7f6abe26-0e82-4df7-942e-8dfa1d559e58"
+        "outputId": "417028a0-ae63-4192-c992-515f3c294f4f"
       },
       "source": [
         "from pyprimesieve import primes, primes_nth\r\n",
@@ -212,7 +219,7 @@
         "print(gaps[0:10])\r\n",
         "print(gaps[-10:])"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +239,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3d184bfa-5ec0-476f-c755-b26edbc231b2"
+        "outputId": "e30cc60e-543d-4711-df61-4ca29837466b"
       },
       "source": [
         "gaps_uniq = set(gaps)\r\n",
@@ -240,7 +247,7 @@
         "print(gap_count)\r\n",
         "print()"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,13 +288,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a4acbded-7d73-4b89-a091-bbaa56c39549"
+        "outputId": "51cccf14-7088-46d3-c124-75e162a8b3dd"
       },
       "source": [
         "print(f'There are {len(set(prime_gaps(10000000)))} prime gaps total') \r\n",
         "# That means 7 bits are needed for a fixed length encoding."
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +312,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wMnr9IQJc6pO",
-        "outputId": "af10a5d8-1465-4def-959d-543b739d887b"
+        "outputId": "b9a9f598-2a26-4d0a-eaa3-1649392babc8"
       },
       "source": [
         "prime_list = list(primes(4, primes_nth(10000000 + 1)))\r\n",
@@ -319,7 +326,7 @@
         "total_megabytes = total_bytes / 2 ** 20\r\n",
         "print(f'Total megabytes: {total_megabytes}')"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,12 +345,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rKqsXyZI1jyY",
-        "outputId": "129fe8eb-be7f-4ba7-8bb6-a0cd28277624"
+        "outputId": "d6767df8-9a0d-4b49-9afd-d4e6db5c407b"
       },
       "source": [
         "7 * 9999998"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -355,7 +362,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 18
         }
       ]
     },
@@ -422,7 +429,7 @@
         "  else:\r\n",
         "    return [(l[1], path)]"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -435,7 +442,7 @@
         "tuples = get_tuples(es_queue(gap_count))\r\n",
         "tree_dict = {key:value for (key, value) in tuples}"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -445,12 +452,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kmlVNYKO8WKh",
-        "outputId": "06cf6736-32ac-4a11-b2cb-509dd43cef51"
+        "outputId": "68a3b927-97e6-4ea3-a399-50283795ecb4"
       },
       "source": [
         "print(tree_dict)"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,13 +484,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XKDlXHCY9Vnl",
-        "outputId": "7c8f13ad-03cc-4b55-cc39-3ece25ec2db9"
+        "outputId": "030e9d92-371e-4c2c-844b-87de6c6904c9"
       },
       "source": [
         "encoded = ''.join([tree_dict[x] for x in gaps])\r\n",
         "print(len(encoded))"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -510,7 +517,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mQcfxBsaBdGi",
-        "outputId": "09054dfb-ecf9-478b-ff1f-020ebbd54c1a"
+        "outputId": "24a4e0b6-2bd2-4a7a-989d-b976b26c4fd4"
       },
       "source": [
         "fixed_length_prime_gaps_bytes = 8749999\r\n",
@@ -526,7 +533,7 @@
         "print(f'From binary = {fixed_primes_ratio}')\r\n",
         "print(f'From ASCII = {ascii_ratio}') "
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +594,7 @@
         "id": "ElukRLoezyxd"
       },
       "source": [
-        "This assignment was really fun for me. I have always been fascinated with data compression. Gaining a deeper understanding of Huffman trees was an exciting endeavor for me. The most fun part of this project was learning that creativity paired with a Huffman tree can result in even greater compression. The idea that the gaps between prime numbers will bring far better data compression than just compressing the ASCII values is incredible and was fun to implement."
+        "This was a really interesting project for my group and me. Personaly I had trouble with this PAP more than any ohter so far. In my group we even focused on makeing sure we did an above and beyond. "
       ]
     },
     {
@@ -605,7 +612,7 @@
         "id": "3-nYIdEUz4x5"
       },
       "source": [
-        "I learned a lot about data compression and functional programming while doing this assignment. The most important thing I learned about data compression is that standard compression algorithms can be combined with creative ways of representing data to result in even greater compression ratios. I want to be able to apply this principle in future explorations into data compression to see what patterns can emerge. I learned a lot of functional programming from this assignment courtesy of Matthew Reed who is a master at it. He helped me understand on a deeper level how to approach problems from a functional standpoint with his code."
+        "For this PAP there was a lot of new things I learned about data compressin and functional programing in Python. I learned about how the Huffman tree works as well as how to use it to encode a list of numbers. It was really hard at first to understand so i ended upo asking a lot of questions from Davis and Matthew. The things I learned form them will definatly help me in the future. "
       ]
     },
     {
@@ -623,7 +630,7 @@
         "id": "XOxh3XFTz-6N"
       },
       "source": [
-        "The most meaningful thing I learned was a new approach to problem-solving with pattern recognition. Finding patterns like the gap sizes being more efficient for data compression than just using the prime file was very insightful. I think this is a useful way of approaching any data-oriented problem. This new way of approaching a problem is one I hope to build upon and apply until I become a master at it."
+        "I would say that the most meeningful thing I learned was how to think outside the box. It is very importent to think of programing in new ways. I think of it like a puzzle it always has a pattern that can be used and finding the pattern is how a programer is succesfull. I plan to continue to develop good problem solving skills like this.  "
       ]
     },
     {
@@ -641,9 +648,7 @@
         "id": "d-sXEeq60C3W"
       },
       "source": [
-        "The most important connection I made was the connection between the number-theoretic prime gaps and data compression. This technique could be used to compress data in other forms by using connections like this one. It cemented in my mind the importance of developing strong pattern recognition skills.<br><br>\r\n",
-        "\r\n",
-        "I also want to give a big thanks to my collaborators, Matthew Reed, Brayden Whitlock, and Paul Samadeni. They taught me a lot in the process of working on the prove."
+        "In order to get the most out of this experience my group desided that we would atempt to do an above and beyond for this assignment. We spent a little over and hour figuring out how to decode our encoded message in order to get back our origanal prime gaps. turns out it is not as easy as first thought we ended up using a queue to shorten the time it takes to find the gaps from what was about 16 hr to about 30 sec.I also give my thanks to my collaborators, Matthew Reed, Davis Kerr, and Paul Samadeni. They where instrumental in teaching me about everything we needed to do to work on the prove."
       ]
     },
     {
@@ -662,7 +667,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wc6asX23HYah",
-        "outputId": "12583cbe-c43b-480c-9078-df2ab940eca8"
+        "outputId": "3ff20dbb-5dae-4273-9cac-016fc346e549"
       },
       "source": [
         "demo = [1,2,3,4]\r\n",
@@ -670,7 +675,7 @@
         "print(gaps[0:10])\r\n",
         "print(gaps[-10:])"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,7 +695,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A-DaZovVCSQj",
-        "outputId": "30ebb5b7-f1c5-4ea0-95a9-0f92ec48778a"
+        "outputId": "57a59682-44b5-4976-bc8b-6a5e4883e624"
       },
       "source": [
         "# Bring the encoded list back to the original list of gaps in a not very efficient way. See next cell for a better way:\r\n",
@@ -716,7 +721,7 @@
         "print(decoded_gaps)\r\n",
         "\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,7 +741,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a30e4c95-d533-44a4-c195-43ff6881901c"
+        "outputId": "3a8e0af0-c24c-4a7a-add0-266e5e3edc99"
       },
       "source": [
         "# Faster way with queues\r\n",
@@ -751,7 +756,7 @@
         "\r\n",
         "print(len(decoded_gaps))"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +774,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0e2e1fa1-6b1e-4038-c8b9-6e7a73d17032"
+        "outputId": "124ba425-8cdc-458b-d147-e620466d00c8"
       },
       "source": [
         "# Verify that it worked\r\n",
@@ -777,7 +782,7 @@
         "print(decoded_gaps[-10:])\r\n",
         "print(decoded_gaps == gaps)"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,25 +798,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4jVX4FtYNeNm",
-        "outputId": "e1abc016-24ac-4006-f5a2-3309564bab1b"
+        "id": "4jVX4FtYNeNm"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 27,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -871,7 +864,7 @@
         "#@markdown ### I correctly calculated the compression ratio from the ASCII size (just the primes, nothing else).\n",
         "cb16 = True #@param {type:'boolean'}"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -891,7 +884,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "edef3adf-fd7d-4e8a-c945-4128655dd4e3"
+        "outputId": "4c5e09d2-0557-4034-a170-a6bbad886745"
       },
       "source": [
         "points_for_what_I_did = [5]*3\n",
@@ -903,7 +896,7 @@
         "                range(len(points)), points))             \n",
         "total"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -915,7 +908,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 29
         }
       ]
     },
@@ -938,7 +931,7 @@
         "number_of_MIs_found = 0 #@param {type: 'slider', min: 0, max: 5}\n",
         "#@markdown ---\n"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     }
   ]
