--- a/10_1_About_Spanning_Trees.ipynb
+++ b/10_1_About_Spanning_Trees.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "10_1_About_Spanning_Trees.ipynb",
+      "name": "Copy of 10_1_About_Spanning_Trees.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO2AwdExb1+k87lStiud+B9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/10_1_About_Spanning_Trees.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/10_1_About_Spanning_Trees.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -164,6 +163,43 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "NeMp19UI6zGS"
+      },
+      "source": [
+        "Assuming NST(n) starts at 1:\n",
+        "        NST(n) = (NST(n-1) * n) + n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GipPmq03Czee",
+        "outputId": "fd0c56fe-599d-48b2-b5de-fdfafe320927"
+      },
+      "source": [
+        "x = 1\n",
+        "n = 4\n",
+        "for i in range(n+1):\n",
+        "  x = (x * i) + i\n",
+        "print(i, ':', x)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4 : 64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "sDxZgNmoTy0Q"
       },
       "source": [
@@ -194,6 +230,56 @@
         "\n",
         "What is the formula for computing NSTIBR(n) in general?"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qqm_eaovDGx1"
+      },
+      "source": [
+        "Starting with NSTIBR(1) = 1\n",
+        "        NSTIBR(n) = NSTIBR(n-1)^2 + 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FYwE5M8mDLh3",
+        "outputId": "51907393-b131-4052-f18e-226bf80e21de"
+      },
+      "source": [
+        "x = 1\n",
+        "print('1 :', x)\n",
+        "n = 4\n",
+        "for i in range(1, n):\n",
+        "  x = x ** 2 + 2\n",
+        "print(i+1, ':', x)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 : 1\n",
+            "4 : 123\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QSFf7PCrDirp"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
