--- a/10_1_About_Spanning_Trees.ipynb
+++ b/10_1_About_Spanning_Trees.ipynb
@@ -155,7 +155,7 @@
         "| 1 | 1      |\n",
         "| 2 | 4      |\n",
         "| 3 | 15     |\n",
-        "| 4 |        |\n",
+        "| 4 | 56     |\n",
         "\n",
         "What is the formula for computing NST(n) in general?\n"
       ]
@@ -166,35 +166,9 @@
         "id": "NeMp19UI6zGS"
       },
       "source": [
-        "Assuming NST(n) starts at 1:\n",
-        "        NST(n) = (NST(n-1) * n) + n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GipPmq03Czee",
-        "outputId": "fd0c56fe-599d-48b2-b5de-fdfafe320927"
-      },
-      "source": [
-        "x = 1\n",
-        "n = 4\n",
-        "for i in range(n+1):\n",
-        "  x = (x * i) + i\n",
-        "print(i, ':', x)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "4 : 64\n"
-          ],
-          "name": "stdout"
-        }
+        "NST(n) = ${2n} \\choose {n+1}$ is the equasion to find spanning trees for n-rung ladder as shown by Matheew Reed. If n = 4, NST(4) = 56 \n",
+        "\n",
+        "[Found at this websight](http://www.ist.tugraz.at/aichholzer/teaching/eca/spanning_trees_in_ladders.pdf)"
       ]
     },
     {
@@ -226,7 +200,7 @@
         "| 1 | 1         |\n",
         "| 2 | 3         |\n",
         "| 3 | 11        |\n",
-        "| 4 |           |\n",
+        "| 4 | 41        |\n",
         "\n",
         "What is the formula for computing NSTIBR(n) in general?"
       ]
@@ -237,8 +211,9 @@
         "id": "Qqm_eaovDGx1"
       },
       "source": [
-        "Starting with NSTIBR(1) = 1\n",
-        "        NSTIBR(n) = NSTIBR(n-1)^2 + 2"
+        "Starting with NST(1) = 1\n",
+        "        NSTIBR(n) = NST(n) - NST(n-1) \n",
+        "        as explained by Paul Semadeni."
       ]
     },
     {
@@ -251,12 +226,7 @@
         "outputId": "51907393-b131-4052-f18e-226bf80e21de"
       },
       "source": [
-        "x = 1\n",
-        "print('1 :', x)\n",
-        "n = 4\n",
-        "for i in range(1, n):\n",
-        "  x = x ** 2 + 2\n",
-        "print(i+1, ':', x)"
+        ""
       ],
       "execution_count": null,
       "outputs": [
